k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: test
   namespace: marshando-thymeleaf
spec:
   ingressClassName: public
   rules:
   - host: desplieguejaveriana.dynaco.co
     http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: test
             port:
               number: 8080
